nginx-hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: nginx-hello-world
  name: nginx-hello-world
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx-hello-world
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-hello-world
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx-hello-world
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 80
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 61
