nginx-hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginx-hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-hello-world
            port:
              number: 80
